; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/detail/extr_list.c_atf_list_index_c.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/atf/atf-c/detail/extr_list.c_atf_list_index_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @atf_list_index_c(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @atf_list_size(i32* %8)
  %10 = icmp ult i64 %7, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @PRE(i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @atf_list_begin_c(i32* %13)
  store i32 %14, i32* %5, align 4
  store i64 0, i64* %6, align 8
  br label %15

15:                                               ; preds = %28, %2
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %26

19:                                               ; preds = %15
  %20 = load i32, i32* %5, align 4
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @atf_list_end_c(i32* %21)
  %23 = call i32 @atf_equal_list_citer_list_citer(i32 %20, i32 %22)
  %24 = icmp ne i32 %23, 0
  %25 = xor i1 %24, true
  br label %26

26:                                               ; preds = %19, %15
  %27 = phi i1 [ false, %15 ], [ %25, %19 ]
  br i1 %27, label %28, label %33

28:                                               ; preds = %26
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @atf_list_citer_next(i32 %29)
  store i32 %30, i32* %5, align 4
  %31 = load i64, i64* %6, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %6, align 8
  br label %15

33:                                               ; preds = %26
  %34 = load i32, i32* %5, align 4
  %35 = call i8* @atf_list_citer_data(i32 %34)
  ret i8* %35
}

declare dso_local i32 @PRE(i32) #1

declare dso_local i64 @atf_list_size(i32*) #1

declare dso_local i32 @atf_list_begin_c(i32*) #1

declare dso_local i32 @atf_equal_list_citer_list_citer(i32, i32) #1

declare dso_local i32 @atf_list_end_c(i32*) #1

declare dso_local i32 @atf_list_citer_next(i32) #1

declare dso_local i8* @atf_list_citer_data(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
